Second part of the rulextract tutorial on retrieval.
Also addressed comments on 1st half:
-- hadoop-1.2.1 -> $HADOOP_ROOT
-- commands to start and stop the cluster
-- if "Retrying connect to server" message, need to start cluster
-- make sure commands are run from $DEMO directory
-- indicate location of intermediate output